log/build_2023-12-13_15-10-21/my_image_processing/stderr.log
  File "/home/niklas/ros2-stereo-camera-analyse/install/my_image_processing/lib/python3.10/site-packages/my_image_processing/bildverarbeitung.py", line 70
    elif y =< 0 and x =< 0:
           ^
SyntaxError: invalid syntax

